20150318 z80/z80.c: really emulate NMI timings more precisely (Stuart).
20150318 z80/z80_ops.c: don't trap on breakpoints whilst halted (Stuart).
20150318 z80/z80.pl: refactor generation of LD r,r handling (Stuart).
20150318 settings.dat,ui/options.dat,z80/{coretest.c,z80.{c,h,pl},z80_checks.h,
         z80_macros.h,z80_ops.c}: emulate NMOS and CMOS Z80 variants (Stuart).
20150318 man/fuse.1: document the CMOS Z80 option (Stuart).
20150318 man/fuse.1,menu.h,menu_data.dat,ui/{options.dat,widget/{menu.c,
         widget.[ch]}}: split tape/Microdrive options into a new Media Options
         dialogue (Stuart).
20150318 man/fuse.1,ui/options.dat: reorder General and Media options (Stuart).
20150318 man/fuse.1: reflect split of Peripherals Options dialogue into General
         and Disk options (Stuart).
20150319 ui/widget/{debugger.c,error.c,filesel.c,menu.c,options.pl,pokemem.c,
         roms.c,widget.[ch]}: add wrappers around widget_do() for better type
         safety (Stuart).
20150319 ui/widget/widget.c: fix incorrect but benign referencing of widget_menu
         array (Stuart).
20150319 bitmap.h,display.c,rectangle.c: replace inline static with static
         inline (Stuart).
20150319 ui/win32/debugger.h: add missing IDC_DBG_REG_HALTED macro (Stuart).
20150319 fuse.c,menu.c,periph.c,peripherals/{disk/{disk.c,fdd.c},ide/{divide.c,
         zxatasp.c,zxcf.c},if1.c,printer.c,spectranet.c},rzx.c,sound/aosound.c,
         tape.c,ui/{fb/fbdisplay.c,gtk/options.pl,widget/{menu.c,,options.pl,
         pokefinder.c,query.c,select.c,widget_internals.h},win32/options.pl}:
         add missing const qualifiers (Stuart).
20150319 ui/win32/debugger.[c|h|rc]: relocate halted flag and set monospaced
         font (Sergio).
20150319 ui/uijoystick.c: fix memory leak and remove unneeded "out of memory"
         error handling (Sergio).
20150322 menu.c,tape.[c|h]: don't show an error when rewinding an empty tape
         (Sergio).